# toyota-dashboard

./: .codacy.yaml  .gitignore  .pre-commit-config.yaml  ANALYSIS_REPORT.md  ARCHITECTURE_IMPROVEMENTS.md  AUTOSTART_FIX.md  CHANGES.md  CREATIVE_IDEAS.md  DEPENDENCY_FIX.md  FILESYSTEM_FIXES.md  FIX_READONLY_FILESYSTEM.md  FUEL_PRICES_README.md  INSTALL_FIX.md  INSTALL_FIXES.md  LOCATION_DEMO.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_ANALYSIS.md  QUICK-START-USER.md  QUICK_FIX.md  RASPBERRY_PI_FIX.md  README-USER-INSTALL.md  README.md  README_UPDATES.md  REPOSITORY_UPDATE.md  SECURITY_FIXES.md  SECURITY_IMPROVEMENTS.md  SUDO_FIX_REPORT.md  SUMMARY.md  TESTING_FUNCTIONS.md  TESTING_REPORT.md  TOYOTA_CHR_PHEV_DASHBOARD.md  UNINSTALL_GUIDE.md  UNINSTALL_IMPROVEMENTS.md  VEHICLE_DATA_SUMMARY.md  app.py  check_paths.py  compare_prices.py  config.example.yaml  config.yaml  copy_to_sanfisko.sh  (+49 more)
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  docs.yml  labeler.yml  linting.yml  python-publish.yml  release-drafter.yml  testing.yml
data/: toyota.db
pytoyoda/: __init__.py  api.py  client.py  const.py  controller.py  exceptions.py
pytoyoda/models/: climate.py  dashboard.py  electric_status.py  location.py  lock_status.py  nofication.py  service_history.py  summary.py  trips.py  vehicle.py
pytoyoda/models/endpoints/: account.py  climate.py  command.py  common.py  electric.py  location.py  notifications.py  service_history.py  status.py  telemetry.py  trips.py  vehicle_guid.py  vehicle_health.py
pytoyoda/utils/: conversions.py  formatters.py  helpers.py  locale.py  log_utils.py  models.py
sandbox/: endpoint_tester.py  endpoints_to_test.py  simple_client_example.py  update_soc.py
static/: climate.html  control.html  diagnostics.html  index.html  location_test.html  manifest.json  notifications.html  settings.html  setup.html  stats.html  test.html  test_all.html
tests/integration_tests/: conftest.py  test_authentication.py
tests/integration_tests/data/: get_static_data.json
tests/unit_tests/: conftest.py  test_api.py  test_client.py  test_init.py
tests/unit_tests/data/: v1_service_history.json
tests/unit_tests/test_models/: test_lock_status.py
tests/unit_tests/test_utils/: test_conversions.py  test_formatter.py  test_helpers.py  test_locale.py  test_logs.py
toyota_dashboard_server/: README.md  app.py  config.example.yaml  database.py  install.sh  models.py  requirements.txt  uninstall.sh  update_nginx_port.sh
toyota_dashboard_server/static/: index.html  setup.html
