[project]
name = "pytoyoda"
description = "Python client for Toyota Connected Services Europe."
license = "MIT"
keywords = [
    "Toyota",
    "Car",
    "MYT",
]
dynamic = ["version", "classifiers", "dependencies"]
readme = "README.md"
authors = [
            {name = "CM000n", email = "simon.hoerrle@gmail.com"},
            {name = "deejay1", email = "deejay1@srem.org"}
            ]
requires-python = '>=3.9,<4.0'

[project.urls]
homepage = "https://pytoyoda.github.io/pytoyoda/pytoyoda.html"
repository = "https://github.com/pytoyoda/pytoyoda"
"Bug Tracker" = "https://github.com/pytoyoda/pytoyoda/issues"
"Release Notes" = "https://github.com/pytoyoda/pytoyoda/releases"

[tool.poetry]
packages = [
    { include = "pytoyoda" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-poetry = '>=2.0,<3.0'
version = "0.0.0"

[tool.poetry.dependencies]
arrow = "^1.1"
hishel = "^0.1.0"
httpx = "^0.28.1"
importlib-metadata = "^8.0.0"
langcodes = "^3.1"
loguru = "^0.7.3"
pydantic = "^2.10.4"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.0.0"
pytest-httpx = "^0.35.0"
pytest-sugar = "^1.0.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.1"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
fix = true
extend-exclude = ["tests", "sandbox"]
lint.select = ["ALL"]
lint.extend-ignore = ["D203", "D213", "COM812"]
lint.pydocstyle.convention = "google"
format.docstring-code-format = true
